# bazel_test_externs

./: MODULE.bazel
extensions/: add_thirdparty_src.bzl  fetch_git.bzl
